--- a/application/index/view/blueprint/blueprint-infos.html
+++ b/application/index/view/blueprint/blueprint-infos.html
@@ -5,159 +5,186 @@
             <input type="hidden" class="layui-input" name="id" title="无法编辑" value="{$blueprintInfo.id}"  >
             <div class="layui-form-item">
                 <label class="layui-form-label">明细编号</label>
-                <div class="layui-input-block">
+                <div class="layui-input-inline">
                     <input type="text" class="layui-input" name="drawing_detail_id" title="无法编辑" value="{$blueprintInfo.drawing_detail_id}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">公司编号</label>
-                <div class="layui-input-block">
+                <div class="layui-input-inline">
                     <input type="text" class="layui-input" name="drawing_internal_id" title="无法编辑" value="{$blueprintInfo.drawing_internal_id}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">外图编号</label>
-                <div class="layui-input-block">
+                <div class="layui-input-inline">
                     <input type="text" class="layui-input" name="drawing_externa_id" value="{$blueprintInfo.drawing_externa_id}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">图纸名称</label>
-                <div class="layui-input-block">
+                <div class="layui-input-inline">
                     <input type="text" class="layui-input" name="drawing_name" value="{$blueprintInfo.drawing_name}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">材料类型</label>
-                <div class="layui-input-block">
-                    <input type="text" class="layui-input" name="material" value="{$blueprintInfo.material}"  >
+                <div class="layui-input-inline">
+                    <select lay-verify="required" lay-search="" name="material">
+                        <option value="{$blueprintInfo.material}">{$blueprintInfo.material}</option>
+                        <optgroup label="选择材料类型">
+                            {volist name="material" id="materialList"}
+                            <option value="{$materialList.material_id}">{$materialList.material_id}</option>
+                            {/volist}
+                        </optgroup>
+                    </select>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">热处理类型</label>
-                <div class="layui-input-block">
+                <div class="layui-input-inline">
                     <input type="text" class="layui-input" name="heat_treatment" value="{$blueprintInfo.heat_treatment}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">图纸类型</label>
-                <div class="layui-input-block">
-                    <input type="text" class="layui-input"  name="drawing_type" value="{$blueprintInfo.drawing_type}"  >
+                <div class="layui-input-inline">
+                    <select lay-verify="required" lay-search="" name="drawing_type">
+                        <option value="{$blueprintInfo.drawing_type}">{$blueprintInfo.drawing_type}</option>
+                        <optgroup label="选择类型">
+                            <option value="零件">零件</option>
+                            <option value="组件">组件</option>
+                        </optgroup>
+                    </select>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">客户简称</label>
-                <div class="layui-input-block">
-                    <input type="text" class="layui-input"  name="client_id" value="{$blueprintInfo.client_id}"  >
+                <div class="layui-input-inline">
+                    <select lay-verify="required" lay-search="" name="client_id">
+                        <option value="{$blueprintInfo.client_id}">{$blueprintInfo.client_id|getClientName}</option>
+                        <optgroup label="选择客户">
+                            {volist name="$client" id="clientList"}
+                            <option value="{$clientList.id}">{$clientList.client_abbreviation}</option>
+                            {/volist}
+                        </optgroup>
+                    </select>
                 </div>
             </div>
 
             <div class="layui-form-item">
                 <label class="layui-form-label">是否批量</label>
-                <div class="layui-input-block">
+                <div class="layui-input-inline">
                     <input type="checkbox"   {if 1==$blueprintInfo.if_batch}checked=""{/if}  name="if_batch" lay-skin="switch" lay-filter="switchTest" lay-text="是|否">
                     <div class="layui-unselect layui-form-switch layui-form-onswitch" lay-skin="_switch"><em>ON</em><i></i></div>
                 </div>
             </div>
 
-            <div class="layui-form-item">
-                <label class="layui-form-label">材料形状</label>
-                <div class="layui-input-block">
-                    <input type="text" class="layui-input"  name="material_type" value="{$blueprintInfo.material_type}"  id="material_type">
+            <div id="fff">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">材料形状</label>
+                    <div class="layui-input-inline">
+                        <select lay-verify="required" lay-search="" name="material_type" lay-filter="material_type">
+                            <option value="{$blueprintInfo.material_type}">{$blueprintInfo.material_type|getMateria}</option>
+                            <optgroup label="选择形状">
+                                {volist name="$materialShape" id="materialShapeList"}
+                                <option value="{$materialShapeList.id}">{$materialShapeList.shape}</option>
+                                {/volist}
+                            </optgroup>
+                        </select>
+                    </div>
                 </div>
             </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">厚度</label>
-                <div class="layui-input-block">
-                    <input type="text" class="layui-input" name="thickness_Dia" value="{$blueprintInfo.thickness_Dia}"  >
+            <div style="border:1px #D8BFD8 solid;margin:10px 0 15px 0;padding:10px 10px 10px 0;box-shadow: 10px 10px 5px #888888;">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">厚度</label>
+                    <div class="layui-input-inline">
+                        <input type="text" class="layui-input" name="thickness_Dia" value="{$blueprintInfo.thickness_Dia}"  >
+                    </div>
+                    <label class="layui-form-label">保证厚度</label>
+                    <div style="padding-top: 6px;">
+                        <input type="checkbox"   {if 1==$blueprintInfo.if_thickness}checked=""{/if}  name="if_thickness" lay-skin="switch" lay-filter="switchTest" lay-text="ON|OFF">
+                        <div class="layui-unselect layui-form-switch layui-form-onswitch" lay-skin="_switch"><em>ON</em><i></i></div>
+                    </div>
                 </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">长度尺寸</label>
-                <div class="layui-input-block">
-                    <input type="text" class="layui-input" name="length_dim" value="{$blueprintInfo.length_dim}"  >
+                <div class="layui-form-item">
+                    <label class="layui-form-label">长度</label>
+                    <div class="layui-input-inline">
+                        <input type="text" class="layui-input" name="length_dim" value="{$blueprintInfo.length_dim}"  >
+                    </div>
+
+                    <label class="layui-form-label">保证长度</label>
+                    <div style="padding-top: 6px;">
+                        <input type="checkbox"   {if 1==$blueprintInfo.if_length}checked=""{/if}  name="if_length" lay-skin="switch" lay-filter="switchTest" lay-text="ON|OFF">
+                        <div class="layui-unselect layui-form-switch layui-form-onswitch" lay-skin="_switch"><em>ON</em><i></i></div>
+                    </div>
                 </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">宽度尺寸</label>
-                <div class="layui-input-block">
-                    <input type="text" class="layui-input" name="width_dim" value="{$blueprintInfo.width_dim}"  >
+                <div class="layui-form-item">
+                    <label class="layui-form-label">宽度</label>
+                    <div class="layui-input-inline">
+                        <input type="text" class="layui-input" name="width_dim" value="{$blueprintInfo.width_dim}"  >
+                    </div>
+
+                    <label class="layui-form-label">保证宽度</label>
+                    <div style="padding-top: 6px;">
+                        <input type="checkbox"   {if 1==$blueprintInfo.if_width}checked=""{/if}  name="if_width" lay-skin="switch" lay-filter="switchTest" lay-text="ON|OFF">
+                        <div class="layui-unselect layui-form-switch layui-form-onswitch" lay-skin="_switch"><em>ON</em><i></i></div>
+                    </div>
                 </div>
             </div>
 
             <div class="layui-form-item">
-                <label class="layui-form-label">保证厚度</label>
-                <div class="layui-input-block">
-                    <input type="checkbox"   {if 1==$blueprintInfo.if_thickness}checked=""{/if}  name="if_thickness" lay-skin="switch" lay-filter="switchTest" lay-text="ON|OFF">
-                    <div class="layui-unselect layui-form-switch layui-form-onswitch" lay-skin="_switch"><em>ON</em><i></i></div>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">保证长度</label>
-                <div class="layui-input-block">
-                    <input type="checkbox"   {if 1==$blueprintInfo.if_length}checked=""{/if}  name="if_length" lay-skin="switch" lay-filter="switchTest" lay-text="ON|OFF">
-                    <div class="layui-unselect layui-form-switch layui-form-onswitch" lay-skin="_switch"><em>ON</em><i></i></div>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">保证宽度</label>
-                <div class="layui-input-block">
-                    <input type="checkbox"   {if 1==$blueprintInfo.if_width}checked=""{/if}  name="if_width" lay-skin="switch" lay-filter="switchTest" lay-text="ON|OFF">
-                    <div class="layui-unselect layui-form-switch layui-form-onswitch" lay-skin="_switch"><em>ON</em><i></i></div>
-                </div>
-            </div>
-            <div class="layui-form-item">
                 <label class="layui-form-label">排料数量</label>
-                <div class="layui-input-block">
+                <div class="layui-input-inline">
                     <input type="text" class="layui-input" name="layout_qty" value="{$blueprintInfo.layout_qty}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">材料要求</label>
-                <div class="layui-input-block">
+                <div class="layui-input-inline">
                     <input type="text" class="layui-input" name="material_requirements" value="{$blueprintInfo.material_requirements}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">产品加工费</label>
-                <div class="layui-input-block">
-                    <input type="text" class="layui-input" name="product_mfg_cost" value="{$blueprintInfo.product_mfg_cost}"  >
+                <div class="layui-input-inline">
+                    <input type="text" class="layui-input" name="product_mfg_cost" value="{$blueprintInfo.product_mfg_cost}"  placeholder="￥">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">产品报价</label>
-                <div class="layui-input-block">
-                    <input type="text" class="layui-input" name="product_quotation" value="{$blueprintInfo.product_quotation}"  >
+                <div class="layui-input-inline">
+                    <input type="text" class="layui-input" name="product_quotation" value="{$blueprintInfo.product_quotation}"  placeholder="￥">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">产品实价</label>
-                <div class="layui-input-block">
-                    <input type="text" class="layui-input" name="product_real_price" value="{$blueprintInfo.product_real_price}"  >
+                <div class="layui-input-inline">
+                    <input type="text" class="layui-input" name="product_real_price" value="{$blueprintInfo.product_real_price}"  placeholder="￥">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">创建人</label>
-                <div class="layui-input-block">
+                <div class="layui-input-inline">
                     <input type="text" class="layui-input" value="{$blueprintInfo.create_name}"  disabled title="不可修改">
                 </div>
             </div>
             <input type="hidden" class="layui-input" name="modify_name" value="{$Think.session.user.user_name}" >
             <div class="layui-form-item">
                 <label class="layui-form-label">创建时间</label>
-                <div class="layui-input-block">
+                <div class="layui-input-inline">
                     <input type="text" class="layui-input" value="{$blueprintInfo.create_time}"  disabled title="不可修改">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">修改时间</label>
-                <div class="layui-input-block">
+                <div class="layui-input-inline">
                     <input type="text" class="layui-input" value="{$blueprintInfo.update_time}"   disabled title="不可修改">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">是否作废</label>
-                <div class="layui-input-block">
+                <div class="layui-input-inline">
                     <input type="checkbox"   {if 1==$blueprintInfo.if_discard}checked=""{/if}  name="if_discard" lay-skin="switch" lay-filter="switchTest" lay-text="ON|OFF">
                     <div class="layui-unselect layui-form-switch layui-form-onswitch" lay-skin="_switch"><em>ON</em><i></i></div>
                 </div>
@@ -181,8 +208,18 @@
              $ = layui.jquery;
              var form = layui.form
                  ,layer = layui.layer;
+
+                //监听事件
+                 form.on('select(material_type)', function(data){
+                     console.log(data.value); //得到被选中的值
+
+
+
+                 });
+
                  //监听提交
                  form.on('submit(formDemo)', function(data){
+                     console.log(data)
                      $.post("{:url('index/Blueprint/blueprintinfos')}",data.field,function(res){
                          if(res == 1){
                              layer.alert("修改成功", {icon: 6},function () {
