--- a/application/index/view/public/footer.html
+++ b/application/index/view/public/footer.html
@@ -1,6 +1,11 @@
 <!-- 底部开始 -->
 <div class="footer">
-    <div class="copyright">Copyright ©2018 恒易管理 v2.0  &nbsp;[<span style="font-size: 12px;color:#fff;"><a style="color: #fff" href="{:url('index/Login/adminLogin')}">管理员登陆入口</a></span>]</div>
+    <div class="copyright">Copyright ©2018 恒易管理 v2.0  &nbsp;
+        {if !$Think.session.user }
+        [<span style="font-size: 12px;color:#fff;"><a style="color: #fff" href="{:url('index/Login/adminLogin')}">管理员登陆入口</a></span>]
+        {/if}
+
+    </div>
 </div>
 <!-- 底部结束 -->
 </body>
