--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -80,11 +80,11 @@
         <th>类型</th>
         <th>客户</th>
         <th>批量</th>
-        <th>工费</th>
+        <th>操作</th>
+        <th>加工费</th>
         <th>报价</th>
         <th>实际价格</th>
         <th>是否作废</th>
-        <th>操作</th>
       </tr>
       </thead>
       <tbody>
@@ -101,19 +101,19 @@
         <td>{$blueprintInfoList.drawing_type}</td>
         <td>{$blueprintInfoList.client_id}</td>
         <td>{$blueprintInfoList.if_batch}</td>
-        <td>{$blueprintInfoList.layout_qty}</td>
-        <td>{$blueprintInfoList.product_mfg_cost}</td>
-        <td>{$blueprintInfoList.product_quotation}</td>
-        <td> {$blueprintInfoList.if_discard?'<span class="layui-badge">是</span>':'<span class="layui-badge layui-bg-green">否</span>'}  </td>
         <td class="td-manage">
           <a title="详" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的所有信息','{:url(\'index/blueprint/blueprintInfos\',[\'id\'=>$blueprintInfoList.drawing_detail_id])}',700)" href="javascript:;"><i class="layui-icon">详</i></a>
           <a title="外" onclick="x_admin_show('外','http://php.me/[爱，就注定了一生的漂泊].刘墉.扫描版.pdf')" href="javascript:;"><i class="layui-icon">外</i></a>
           <a title="内" onclick="x_admin_show('内','http://php.me/超越平凡的平面设计+版式设计原理.pdf')" href="javascript:;"><i class="layui-icon">内</i></a>
           <a title="程" onclick="x_admin_show('程','http://php.me/微交互  细节设计成就卓越产品.pdf')" href="javascript:;"><i class="layui-icon">程</i></a>
-        {if $blueprintInfoList.count !=0}
+          {if $blueprintInfoList.count !=0}
           <a title="工"  href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><i class="layui-icon">工</i></a>
-      {/if}
+          {/if}
         </td>
+        <td>{$blueprintInfoList.layout_qty}</td>
+        <td>{$blueprintInfoList.product_mfg_cost}</td>
+        <td>{$blueprintInfoList.product_quotation}</td>
+        <td> {$blueprintInfoList.if_discard?'<span class="layui-badge">是</span>':'<span class="layui-badge layui-bg-green">否</span>'}  </td>
       </tr>
       {/volist}
       </tbody>
