--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -93,7 +93,7 @@
         <td>
           <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='{$blueprintInfoList.id}'><i class="layui-icon">&#xe605;</i></div>
         </td>
-        <td> <a href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" >{$blueprintInfoList.drawing_detail_id}</a></td>
+        <td> <a href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><i class="layui-icon" style="color: #1E9FFF">{$blueprintInfoList.drawing_detail_id}</i></a></td>
         <td>{$blueprintInfoList.drawing_internal_id}</td>
         <td>{$blueprintInfoList.drawing_externa_id}</td>
         <td>{$blueprintInfoList.drawing_name}</td>
