图纸明细-修复

--- a/application/index/view/blueprint/blueprint-infos.html
+++ b/application/index/view/blueprint/blueprint-infos.html
@@ -6,19 +6,19 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">明细编号</label>
                 <div class="layui-input-inline">
-                    <input type="text" class="layui-input" name="drawing_detail_id" title="无法编辑" value="{$blueprintInfo.drawing_detail_id}"  >
+                    <input type="text" class="layui-input" title="无法编辑" value="{$blueprintInfo.drawing_detail_id}" disabled>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">公司编号</label>
                 <div class="layui-input-inline">
-                    <input type="text" class="layui-input" name="drawing_internal_id" title="无法编辑" value="{$blueprintInfo.drawing_internal_id}"  >
+                    <input type="text" class="layui-input" title="无法编辑" value="{$blueprintInfo.drawing_internal_id}"  disabled>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">外图编号</label>
                 <div class="layui-input-inline">
-                    <input type="text" class="layui-input" name="drawing_externa_id" value="{$blueprintInfo.drawing_externa_id}"  >
+                    <input type="text" class="layui-input"  value="{$blueprintInfo.drawing_externa_id}" title="无法编辑" disabled>
                 </div>
             </div>
             <div class="layui-form-item">
