--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -104,7 +104,7 @@
         <td>{$blueprintInfoList.material}</td>
         <td>{$blueprintInfoList.drawing_type}</td>
         <td>{$blueprintInfoList.client_id|getClientName}</td>
-        <td>{$blueprintInfoList.if_batch}</td>
+        <td>{$blueprintInfoList.if_batch?"是":"否"}</td>
         <td class="td-manage">
           <a title="外" onclick="x_admin_show('外','http://php.me/[爱，就注定了一生的漂泊].刘墉.扫描版.pdf')" href="javascript:;"><span class="layui-badge layui-bg-orange">图</span></a>
           <a title="内" onclick="x_admin_show('内','http://php.me/超越平凡的平面设计+版式设计原理.pdf')" href="javascript:;"><span class="layui-badge layui-bg-orange">3D</span></a>
@@ -113,9 +113,9 @@
           <a title="工"  href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><i class="layui-icon">工</i></a>
           {/if}
         </td>
-        <td>{$blueprintInfoList.layout_qty}</td>
-        <td>{$blueprintInfoList.product_mfg_cost}</td>
-        <td>{$blueprintInfoList.product_quotation}</td>
+        <td>{$blueprintInfoList.layout_qty} ￥</td>
+        <td>{$blueprintInfoList.product_mfg_cost} ￥</td>
+        <td>{$blueprintInfoList.product_quotation} ￥</td>
         <td> {$blueprintInfoList.if_discard?'<span class="layui-badge">是</span>':'<span class="layui-badge layui-bg-green">否</span>'}  </td>
       </tr>
       {/volist}
