完成价格权限、完善创建人、修改人字段自动入库

--- a/application/index/view/assembly/assembly-edit.html
+++ b/application/index/view/assembly/assembly-edit.html
@@ -30,12 +30,12 @@
                 <textarea class="layui-textarea"  name="remark">{$assemblyRow.remark}</textarea>
             </div>
         </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">修改人</label>
-            <div class="layui-input-inline">
-                <input type="text" class="layui-input" id="modify_name" name="modify_name" value="ADMIN" disabled >
-            </div>
-        </div>
+        <!--<div class="layui-form-item">-->
+            <!--<label class="layui-form-label">修改人</label>-->
+            <!--<div class="layui-input-inline">-->
+                <!--<input type="text" class="layui-input" id="modify_name" name="modify_name" value="ADMIN" disabled >-->
+            <!--</div>-->
+        <!--</div>-->
         <div class="layui-form-item">
             <label class="layui-form-label">
             </label>
