--- a/application/index/view/blueprint/process-edit.html
+++ b/application/index/view/blueprint/process-edit.html
@@ -95,12 +95,12 @@
         <input type="text" id="remark" name="remark" value="{$processRow.remark}"  autocomplete="off" class="layui-input" >
       </div>
     </div>
-    <div class="layui-form-item">
-      <label class="layui-form-label">创建人</label>
-      <div class="layui-input-inline">
-        <input type="text" id="create_name" name="create_name"  value="{$processRow.create_name}" autocomplete="off" class="layui-input" >
-      </div>
-    </div>
+    <!--<div class="layui-form-item">-->
+      <!--<label class="layui-form-label">创建人</label>-->
+      <!--<div class="layui-input-inline">-->
+        <!--<input type="text" id="create_name" name="create_name"  value="{$processRow.create_name}" autocomplete="off" class="layui-input" >-->
+      <!--</div>-->
+    <!--</div>-->
     <div class="layui-form-item">
       <label class="layui-form-label"></label>
       <button class="layui-btn" lay-submit lay-filter="addId">
