--- a/application/index/view/employee/employee-add.html
+++ b/application/index/view/employee/employee-add.html
@@ -132,8 +132,16 @@
         <div class="layui-form-item" lay-filter="sex">
             <label class="layui-form-label">定额权限</label>
             <div class="layui-input-block">
-                <input type="radio" name="is_quota" value="1" title="修改" ><div class="layui-unselect layui-form-radio layui-form-radioed"><i class="layui-anim layui-icon layui-anim-scaleSpring"></i><div>修改</div></div>
                 <input type="radio" name="is_quota" value="0" title="查看" checked=""><div class="layui-unselect layui-form-radio"><i class="layui-anim layui-icon"></i><div>查看</div></div>
+                <input type="radio" name="is_quota" value="1" title="修改" ><div class="layui-unselect layui-form-radio layui-form-radioed"><i class="layui-anim layui-icon layui-anim-scaleSpring"></i><div>修改</div></div>
+            </div>
+        </div>
+        <div class="layui-form-item" lay-filter="sex">
+            <label class="layui-form-label">价格权限</label>
+            <div class="layui-input-block">
+                <input type="radio" name="is_price" value="0" title="隐藏"  checked=""><div class="layui-unselect layui-form-radio layui-form-radioed"><i class="layui-anim layui-icon layui-anim-scaleSpring"></i><div>隐藏</div></div>
+                <input type="radio" name="is_price" value="1" title="查看" ><div class="layui-unselect layui-form-radio"><i class="layui-anim layui-icon"></i><div>查看</div></div>
+                <input type="radio" name="is_price" value="2" title="修改"><div class="layui-unselect layui-form-radio"><i class="layui-anim layui-icon"></i><div>修改</div></div>
             </div>
         </div>
         <div class="layui-form-item">
