--- a/application/index/view/assembly/assembly-add.html
+++ b/application/index/view/assembly/assembly-add.html
@@ -25,12 +25,12 @@
                 <textarea class="layui-textarea"  name="remark"></textarea>
             </div>
         </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">创建人</label>
-            <div class="layui-input-inline">
-                <input type="text" class="layui-input" id="create_name" name="create_name" value="ADMIN" disabled >
-            </div>
-        </div>
+        <!--<div class="layui-form-item">-->
+            <!--<label class="layui-form-label">创建人</label>-->
+            <!--<div class="layui-input-inline">-->
+                <!--<input type="text" class="layui-input" id="create_name" name="create_name" value="ADMIN" disabled >-->
+            <!--</div>-->
+        <!--</div>-->
         <div class="layui-form-item">
             <label class="layui-form-label">
             </label>
