--- a/application/index/view/internal/internal-add-a.html
+++ b/application/index/view/internal/internal-add-a.html
@@ -17,12 +17,12 @@
                   <input type="text" id="remark" name="remark"  autocomplete="off" class="layui-input">
               </div>
           </div>
-            <div class="layui-form-item">
-                <label for="create_name" class="layui-form-label">创建人</label>
-                <div class="layui-input-inline">
-                    <input type="text" id="create_name" name="create_name" lay-verify="required" autocomplete="off" value="ADMIN"  disabled class="layui-input">
-                </div>
-            </div>
+            <!--<div class="layui-form-item">-->
+                <!--<label for="create_name" class="layui-form-label">创建人</label>-->
+                <!--<div class="layui-input-inline">-->
+                    <!--<input type="text" id="create_name" name="create_name" lay-verify="required" autocomplete="off" value="ADMIN"  disabled class="layui-input">-->
+                <!--</div>-->
+            <!--</div>-->
           <div class="layui-form-item">
               <label class="layui-form-label"></label>
               <button class="layui-btn" lay-submit lay-filter="addId" >
@@ -32,9 +32,6 @@
       </form>
     </div>
     <script>
-
-
-
         layui.use(['form'], function(){
           $ = layui.jquery;
           var form = layui.form,layer = layui.layer;
