--- a/application/index/view/internal/internal-add.html
+++ b/application/index/view/internal/internal-add.html
@@ -17,12 +17,12 @@
                   <input type="text" id="remark" name="remark" autocomplete="off" class="layui-input">
               </div>
           </div>
-            <div class="layui-form-item">
-                <label for="create_name" class="layui-form-label">创建人</label>
-                <div class="layui-input-inline">
-                    <input type="text" id="create_name" name="create_name" lay-verify="required" autocomplete="off" value="杨世晖"  disabled class="layui-input">
-                </div>
-            </div>
+            <!--<div class="layui-form-item">-->
+                <!--<label for="create_name" class="layui-form-label">创建人</label>-->
+                <!--<div class="layui-input-inline">-->
+                    <!--<input type="text" id="create_name" name="create_name" lay-verify="required" autocomplete="off" value="杨世晖"  disabled class="layui-input">-->
+                <!--</div>-->
+            <!--</div>-->
           <div class="layui-form-item">
               <label class="layui-form-label"></label>
               <button class="layui-btn" lay-submit lay-filter="addId" >
