--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -20,25 +20,7 @@
       <!--<input type="tel" id="findText" lay-verify="required|phone" autocomplete="off" placeholder="请输入关键字..." class="layui-input">-->
       <form class="layui-form" action="{:url('index/Blueprint/blueprintInfo')}" method="post">
         <div class="layui-input-inline">
-          <select name="modules" lay-verify="required" lay-search="" id="findText">
-            <option value=""  >请输入关键字...</option>
-            <optgroup label="外图明细">
-              {volist name="$blueprintKeyInfo" id="blueprintInfoList"}
-              <option value="{$blueprintInfoList.drawing_detail_id}">{$blueprintInfoList.drawing_detail_id}</option>
-              {/volist}
-            </optgroup>
-            <optgroup label="公司编号">
-              {volist name="$blueprintKeyInfo" id="blueprintInfoList"}
-              <option value="{$blueprintInfoList.drawing_internal_id}">{$blueprintInfoList.drawing_internal_id}</option>
-              {/volist}
-            </optgroup>
-
-            <optgroup label="外图编号">
-              {volist name="$blueprintKeyInfo" id="blueprintInfoList"}
-              <option value="{$blueprintInfoList.drawing_externa_id}">{$blueprintInfoList.drawing_externa_id}</option>
-              {/volist}
-            </optgroup>
-          </select>
+          <input type="text" name="modules" autocomplete="off" placeholder="请输入关键字..." class="layui-input">
         </div>
         <button type="submit" class="layui-btn"  lay-submit="" lay-filter="sreach" id="find"><i class="layui-icon">&#xe615;</i></button>
       </form>
@@ -51,15 +33,13 @@
           $("#find").click(function () {
               var findText = $("#findText").val();
               if(findText.length > 1){
-                  window.location.href="{:url('index/blueprint/blueprintInfo')}";
+                  window.location.href="{:url('index/Blueprint/blueprintInfo')}";
               }else{
                   layer.msg('请输入查找的关键字!',{icon:0,time:2000});
               }
 
           });
-      })
-      $("#a").change(function(){
-          alert(1);
+
       })
     </script>
     <!--<span class="x-right" style="line-height:40px">共：{$blueprintInfoCount}条数据</span>-->
