--- a/application/index/view/blueprint/add-drawing-detial.html
+++ b/application/index/view/blueprint/add-drawing-detial.html
@@ -140,7 +140,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">是否批量</label>
             <div class="layui-input-inline">
-                <input type="checkbox" checked="" name="open" lay-skin="switch" lay-filter="switchTest" lay-text="是|否"  id="if_batch">
+                <input type="checkbox" name="close" lay-skin="switch" lay-text="是|否"  id="if_batch">
             </div>
         </div>
         <div class="layui-form-item">
