--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -8,7 +8,7 @@
           <cite>图纸明细</cite>
         </a>
       </span>
-  <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
+  <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" href="/index/blueprint/blueprintInfo" title="刷新">
     <i class="layui-icon" style="line-height:30px">ဂ</i></a>
 </div>
 
@@ -22,25 +22,29 @@
         <div class="layui-input-inline">
           <input type="text" name="modules" autocomplete="off" placeholder="请输入关键字..." class="layui-input">
         </div>
-        <button type="submit" class="layui-btn"  lay-submit="" lay-filter="sreach" id="find"><i class="layui-icon">&#xe615;</i></button>
+        <div class="layui-input-inline">
+          <select name="id" lay-search="" >
+            <option value="">输入简称</option>
+            <optgroup label="外图明细">
+              {volist name="$clientKeyInfo" id="clientKeyInfoList"}
+              <option value="{$clientKeyInfoList.id}">{$clientKeyInfoList.client_abbreviation}</option>
+              {/volist}
+            </optgroup>
+          </select>
+        </div>
+        <button type="submit" class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
       </form>
     </div>
     <script>
-
-    </script>
-    <script>
       $(function () {
-          $("#find").click(function () {
-              var findText = $("#findText").val();
-              if(findText.length > 1){
-                  window.location.href="{:url('index/Blueprint/blueprintInfo')}";
-              }else{
-                  layer.msg('请输入查找的关键字!',{icon:0,time:2000});
-              }
-
+          $("input").click(function () {
+              $("input").val("");
+          });
+          $("xblock").click(function () {
+              $("dd").val("");
           });
 
-      })
+      });
     </script>
     <!--<span class="x-right" style="line-height:40px">共：{$blueprintInfoCount}条数据</span>-->
   </xblock>
