--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -106,10 +106,12 @@
         <td>{$blueprintInfoList.product_quotation}</td>
         <td>否</td>
         <td class="td-manage">
-          <a title="详" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的所有信息','{:url(\'index/blueprint/blueprintInfos\',[\'id\'=>$blueprintInfoList.drawing_detail_id])}',450)" href="javascript:;"><i class="layui-icon">详</i></a>
-          <a title="外" onclick="x_admin_show('外','http://php.me/[爱，就注定了一生的漂泊].刘墉.扫描版.pdf')" href="javascript:;"><i class="layui-icon">外</i></a>
-          <a title="内" onclick="x_admin_show('内','http://php.me/超越平凡的平面设计+版式设计原理.pdf')" href="javascript:;"><i class="layui-icon">内</i></a>
-          <a title="程" onclick="x_admin_show('程','http://php.me/微交互  细节设计成就卓越产品.pdf')" href="javascript:;"><i class="layui-icon">程</i></a>
+          <a title="详" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的所有信息',
+          '{:url(\'index/blueprint/blueprintInfos\',[\'id\'=>$blueprintInfoList.drawing_detail_id])}',450)" href="javascript:;"><i class="layui-icon">详</i></a>
+          <a title="外" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的外图文件',
+          '{:url(\'index/blueprint/is_DrawingFiles\',[\'id\'=>$blueprintInfoList.drawing_detail_id,\'key\'=>\'wai\'])}')" href="javascript:;"><i class="layui-icon">外</i></a>
+          <a title="内" onclick="x_admin_show('内','')" href="javascript:;"><i class="layui-icon">内</i></a>
+          <a title="程" onclick="x_admin_show('程','')" href="javascript:;"><i class="layui-icon">程</i></a>
           <a title="工" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" href="javascript:;"><i class="layui-icon">工</i></a>
         </td>
       </tr>
