--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -108,10 +108,15 @@
         <td class="td-manage">
           <a title="详" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的所有信息',
           '{:url(\'index/blueprint/blueprintInfos\',[\'id\'=>$blueprintInfoList.drawing_detail_id])}',450)" href="javascript:;"><i class="layui-icon">详</i></a>
+
           <a title="外" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的外图文件',
           '{:url(\'index/blueprint/is_DrawingFiles\',[\'id\'=>$blueprintInfoList.drawing_detail_id,\'key\'=>\'wai\'])}')" href="javascript:;"><i class="layui-icon">外</i></a>
-          <a title="内" onclick="x_admin_show('内','')" href="javascript:;"><i class="layui-icon">内</i></a>
-          <a title="程" onclick="x_admin_show('程','')" href="javascript:;"><i class="layui-icon">程</i></a>
+
+          <a title="内" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的内图文件',
+          '{:url(\'index/blueprint/is_DrawingFiles\',[\'id\'=>$blueprintInfoList.drawing_detail_id,\'key\'=>\'nei\'])}')" href="javascript:;"><i class="layui-icon">内</i></a>
+
+          <a title="程" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的程序图文件',
+          '{:url(\'index/blueprint/is_DrawingFiles\',[\'id\'=>$blueprintInfoList.drawing_detail_id,\'key\'=>\'cheng\'])}')" href="javascript:;"><i class="layui-icon">程</i></a>
           <a title="工" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" href="javascript:;"><i class="layui-icon">工</i></a>
         </td>
       </tr>
