完成截面重量模块

--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -122,6 +122,12 @@
                         </a>
                     </li >
                     <li>
+                        <a _href="{:url('index/Section/section')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>材料截面</cite>
+                        </a>
+                    </li >
+                    <li>
                         <a _href="{:url('index/Department/departmentInfo')}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>部门名称</cite>
